--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -18,6 +18,7 @@ jobs:
           - "macos-latest"
           - "windows-latest"
         node_version:
+          - "22"
           - "20"
           - "18"
         # exclude:
@@ -49,9 +50,11 @@ jobs:
       - name: Run Test
         run: yarn test-coverage
 
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
         with:
           fail_ci_if_error: true
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   lint:
     name: Lint
