--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -49,12 +49,9 @@ jobs:
 
       - name: Run Test
         run: yarn test-coverage
-
-      - uses: codecov/codecov-action@v4
-        with:
-          fail_ci_if_error: true
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
 
   lint:
     name: Lint
