--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "dependencies": {
     "@frostoven/libsquoosh": "^0.4.8",
-    "svgo": "3.3.2"
+    "svgo": "^3.3.2"
   },
   "devDependencies": {
     "@fisker/eslint-config": "13.1.0",
