--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "vite-plugin-image-squoosh",
+  "name": "vite-plugin-image-minify",
   "version": "0.0.1",
-  "description": "Vite plugin to run squoosh on images.",
-  "homepage": "https://github.com/fisker/vite-plugin-image-squoosh#readme",
+  "description": "Vite plugin to minify images.",
+  "homepage": "https://github.com/fisker/vite-plugin-image-minify#readme",
   "bugs": {
-    "url": "https://github.com/fisker/vite-plugin-image-squoosh/issues"
+    "url": "https://github.com/fisker/vite-plugin-image-minify/issues"
   },
-  "repository": "fisker/vite-plugin-image-squoosh",
-  "funding": "https://github.com/fisker/vite-plugin-image-squoosh?sponsor=1",
+  "repository": "fisker/vite-plugin-image-minify",
+  "funding": "https://github.com/fisker/vite-plugin-image-minify?sponsor=1",
   "license": "MIT",
   "author": {
     "name": "fisker Cheung",
@@ -19,7 +19,8 @@
   "exports": "./index.js",
   "files": [
     "index.js",
-    "squoosh.js"
+    "squoosh.js",
+    "svgo.js"
   ],
   "scripts": {
     "clean": "run-p \"clean:*\"",
@@ -42,7 +43,8 @@
     "release": "runs-s lint test dist"
   },
   "dependencies": {
-    "@frostoven/libsquoosh": "^0.4.8"
+    "@frostoven/libsquoosh": "^0.4.8",
+    "svgo": "^3.3.2"
   },
   "devDependencies": {
     "@fisker/eslint-config": "13.1.0",
