--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-image-minify",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Vite plugin to minify images.",
   "keywords": [
     "vite-plugin",
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@frostoven/libsquoosh": "^0.4.8",
+    "iterate-directory-up": "1.1.1",
     "svgo": "^3.3.2",
     "temp-dir": "3.0.0"
   },
