--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "exports": "./index.js",
   "files": [
     "index.js",
+    "./utilities.js",
     "package-json-proxy.cjs",
     "cache.js",
     "squoosh.js",
