--- a/package.json
+++ b/package.json
@@ -56,6 +56,10 @@
   },
   "dependencies": {
     "@frostoven/libsquoosh": "^0.4.8",
+    "is-jpg": "3.0.0",
+    "is-png": "3.0.1",
+    "is-svg": "5.0.1",
+    "is-webp": "2.0.0",
     "iterate-directory-up": "1.1.1",
     "svgo": "^3.3.2",
     "temp-dir": "3.0.0"
